# kimager

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPING.md  Dockerfile  Makefile  README.md  RELEASE.md
chart/: Chart.yaml  values.yaml
chart/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
src/: event_driver.rs  lib.rs  main.rs  util.rs  watcher.rs
