[package]
name = "image-logger"
version = "1.0.0"
license = "Apache-2.0"
authors = ["Nick Gerace <nickagerace@gmail.com>"]
edition = "2018"
description = "A service that logs container images in your Kubernetes cluster."
homepage = "https://nickgerace.dev"
repository = "https://github.com/nickgerace/image-logger/"
readme = "README.md"
keywords = ["kubernetes", "image", "k8s", "logger", "service"]
categories = ["development-tools", "command-line-interface"]

[dependencies]
bimap = "0.5.3"
env_logger = "0.8.2"
eyre = "0.6.3"
futures = "0.3.8"
k8s-openapi = { version = "0.10.0", features = ["v1_18"], default-features=false }
kube = { version = "0.45.0", features = ["derive"] }
log = "0.4.11"
tokio = { version = "0.2.24", features = ["macros"] }
