[package]
authors = ["Nick Gerace <nickagerace@gmail.com>"]
categories = ["development-tools", "command-line-interface"]
description = "Logs the existence of container images in a Kubernetes cluster."
edition = "2018"
homepage = "https://nickgerace.dev"
keywords = ["kubernetes", "image", "k8s", "container", "logging"]
license = "Apache-2.0"
name = "kimager"
readme = "README.md"
repository = "https://github.com/nickgerace/kimager/"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bimap = "0.6"
env_logger = "0.8"
futures = "0.3"
k8s-openapi = { version = "0.11.0", features = ["v1_20"], default-features=false }
kube = { version = "0.52.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
